2006-10-22  John Wiegley  <johnw@newartisans.com>

	* progmodes/python.el (python-use-skeletons): python-mode was
	auto-inserting templates (for those with abbrev-mode on), not only
	by default -- *but without a configuration variable to disable
	it*.  This rendered python-mode completely useless for me, so I
	have added `python-use-skeletons', which is now off by default.

2006-10-22  Chong Yidong  <cyd@stupidchicken.com>

	* progmodes/cperl-mode.el (cperl-mode): Don't assume
	font-lock-multiline is auto-local (it's not).
	(cperl-windowed-init): Ensure that cperl-font-lock-multiline is
	initialized before calling cperl-init-faces.

2006-10-22  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-info-stack-custom): Don't try to give
	gdb-stack-position a value when there is no fringe.

	* bindings.el (mode-line-mode-menu): Disable auto-revert-tail-mode
	indicator if not visiting a file.

2006-10-20  David Kastrup  <dak@gnu.org>

	* window.el (kill-buffer-and-window): Fix a bug where an aborted
	operation would still cause some window to collapse later.

2006-10-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc.el (vc-switch-backend): Try to be more careful with unwanted
	side-effect due to mixing various backends's file properties.

	* vc-svn.el (vc-svn-parse-status): Remove unused arg `localp'.
	Add arg `filename' instead.  Don't set vc-backend if `filename' is set.
	Return `filename's status if applicable.  Update callers.

2006-10-19  Kenichi Handa  <handa@m17n.org>

	* international/kkc.el (kkc-region): When a key sequence is not
	defined, append (this-single-command-raw-keys) to
	unread-input-method-events.

2006-10-19  Juanma Barranquero  <lekktu@gmail.com>

	* progmodes/ada-mode.el (ada-in-string-p): Doc fix.

2006-10-19  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* version.el (emacs-version): Use mac-carbon-version-string.

	* term/macterm.el (res-geometry): Apply 2006-10-18 change for x-win.el.
